--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
     "@mui/joy": "^5.0.0-beta.28",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.15.11",
+    "@mui/x-charts": "^6.19.5",
+    "@mui/x-date-pickers": "^6.19.5",
+    "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18",
+    "react-horizontal-datepicker": "^2.0.3",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.6"
