--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-horizontal-datepicker": "^2.0.3",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.6"
   },
