--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
+    "@mui/icons-material": "^5.15.15",
     "@mui/joy": "^5.0.0-beta.28",
-    "@mui/material": "^5.15.11",
+    "@mui/material": "^5.15.15",
     "@mui/x-charts": "^6.19.5",
     "@mui/x-date-pickers": "^6.19.5",
     "dayjs": "^1.11.10",
@@ -25,7 +26,9 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
-    "swiper": "^11.0.6"
+    "sweetalert2": "^11.10.7",
+    "swiper": "^11.0.6",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
